--- a/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
+++ b/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
@@ -11,8 +11,6 @@
 	d:DesignHeight="1080"
 	xmlns:viewModel="using:AHON_TRACK.Components.ViewModels"
 	x:DataType="viewModel:EmployeeProfileInformationViewModel"
-	Width="1666"
-	Height="1080"
 	x:Class="AHON_TRACK.Components.EmployeeProfile.EmployeeProfileInformationView">
 
 	<Design.DataContext>
@@ -62,10 +60,10 @@
 				Margin="90,90"/>
 		</StackPanel>
 		<ScrollViewer VerticalScrollBarVisibility="Auto">
-			<StackPanel>
+			<StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="48,0,48,24" Spacing="16">
 				<shadui:BreakpointViewPort>
 					<!-- Extra large and up breakpoint (1280px and above). -->
-					<shadui:BreakpointView Breakpoint="LgAndUp">
+					<shadui:BreakpointView Breakpoint="XlAndUp">
 						<Grid Margin="100,20" ColumnDefinitions="5* 10*">
 							<shadui:Card Grid.Column="0" VerticalAlignment="Top">
 								<StackPanel>
@@ -84,7 +82,7 @@
 												CornerRadius="150"
 												ClipToBounds="True">
 												<Image
-													Name="EmployeeProfileImage"
+													Name="EmployeeProfileImage1"
 													Stretch="UniformToFill"
 													IsVisible="True"
 													Source="avares://AHON_TRACK/Assets/ManageEmployeesView/user-admin.png"/>
@@ -479,6 +477,432 @@
 																Text="{CompiledBinding EmployeeCityProvince}"
 																Classes="h5"
 																Margin="350,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+													</StackPanel>
+												</Grid>
+											</StackPanel>
+										</shadui:Card>
+									</StackPanel>
+								</ScrollViewer>
+							</shadui:Card>
+						</Grid>
+					</shadui:BreakpointView>
+					<!-- Extra large and down breakpoint (1280px and below). -->
+					<shadui:BreakpointView Breakpoint="XlAndDown">
+						<Grid Margin="100,20" RowDefinitions="* *">
+							<shadui:Card Grid.Row="0" VerticalAlignment="Top">
+								<StackPanel>
+									<StackPanel HorizontalAlignment="Center">
+										<StackPanel
+											Orientation="Vertical"
+											Spacing="10">
+											<!-- Profile image placeholder -->
+											<Border
+												Width="90"
+												Height="90"
+												Margin="0,10"
+												Background="#F5F5F5"
+												BorderBrush="#CCCCCC"
+												BorderThickness="1"
+												CornerRadius="150"
+												ClipToBounds="True">
+												<Image
+													Name="EmployeeProfileImage2"
+													Stretch="UniformToFill"
+													IsVisible="True"
+													Source="avares://AHON_TRACK/Assets/ManageEmployeesView/user-admin.png"/>
+											</Border>
+
+											<!-- Username -->
+											<TextBlock
+												Text="{CompiledBinding EmployeeFullName}"
+												FontSize="24"
+												FontWeight="SemiBold"
+												Foreground="{DynamicResource FontForeground}"
+												HorizontalAlignment="Center"
+												Margin="0,-10"/>
+
+											<!-- Position -->
+											<TextBlock
+												Text="{CompiledBinding EmployeePosition}"
+												Classes="Muted"
+												FontSize="14"
+												FontWeight="Medium"
+												HorizontalAlignment="Center"
+												Margin="0,5"/>
+										</StackPanel>
+
+										<!-- Full Name Contact -->
+										<StackPanel
+											Orientation="Horizontal"
+											HorizontalAlignment="Center"
+											Margin="0,20,0,8">
+											<Border
+												Background="LightBlue"
+												CornerRadius="11"
+												Padding="25,1">
+												<StackPanel
+												Orientation="Horizontal"
+												Height="30">
+													<Svg
+														VerticalAlignment="Center"
+														Width="20"
+														Height="20"
+														Margin="0,-3,10,0"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/contact-user-icon.svg"/>
+													<TextBlock
+														Text="{CompiledBinding EmployeeFullName}"
+														FontSize="13"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource InfoColor}"
+														VerticalAlignment="Center"/>
+												</StackPanel>
+											</Border>
+										</StackPanel>
+
+										<!-- Phone Number Contact -->
+										<StackPanel
+											Orientation="Horizontal"
+											HorizontalAlignment="Center"
+											Margin="0,5,0,0">
+											<Border
+												Background="{DynamicResource SuccessBackgroundColor}"
+												CornerRadius="11"
+												Padding="25,1">
+												<StackPanel
+													Orientation="Horizontal"
+													Height="30">
+													<Svg
+														VerticalAlignment="Center"
+														Width="20"
+														Height="20"
+														Margin="0,-3,10,0"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/phone-icon.svg"/>
+													<TextBlock
+														Text="{CompiledBinding EmployeePhoneNumber}"
+														FontSize="13"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource SuccessFontColor}"
+														VerticalAlignment="Center"/>
+												</StackPanel>
+											</Border>
+										</StackPanel>
+									</StackPanel>
+								</StackPanel>
+							</shadui:Card>
+							<!-- Right Content Area -->
+							<!-- Employee Information Section -->
+							<shadui:Card Grid.Row="1" Margin="0,20,0,30" HorizontalAlignment="Center">
+								<ScrollViewer>
+									<StackPanel>
+										<shadui:Card>
+											<StackPanel>
+												<!-- Header -->
+												<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+													<Svg
+														Width="30"
+														Height="30"
+														VerticalAlignment="Center"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/employee-information-icon.svg"/>
+													<shadui:CardTitle
+														Content="Employee Information"
+														FontSize="22"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource InfoColor}"
+														VerticalAlignment="Center"
+														Margin="20,0"/>
+												</StackPanel>
+												<Separator Margin="20"/>
+												<StackPanel>
+													<!-- Employee ID Row -->
+													<StackPanel Grid.Column="0" Orientation="Horizontal">
+														<TextBlock
+															Text="Employee ID"
+															Classes="h4"
+															Width="150"
+															Foreground="{DynamicResource FontForeground}"/>
+														<TextBlock
+															Text="{CompiledBinding EmployeeID}"
+															Classes="h5"
+															Margin="200,0"
+															Foreground="{DynamicResource FontForeground}"/>
+													</StackPanel>
+													<Separator Width="2000" Margin="0,20"/>
+
+													<!-- Employee Position Row -->
+													<StackPanel Grid.Column="1" Orientation="Horizontal">
+														<TextBlock
+															Text="Position"
+															Classes="h4"
+															Width="150"
+															Foreground="{DynamicResource FontForeground}"/>
+														<TextBlock
+															Text="{CompiledBinding EmployeePosition}"
+															Classes="h5"
+															Margin="200,0"
+															Foreground="{DynamicResource FontForeground}"/>
+													</StackPanel>
+													<Separator Width="2000" Margin="0,20"/>
+
+													<!-- Employee Status Row -->
+													<StackPanel Grid.Column="1" Orientation="Horizontal">
+														<TextBlock
+															Text="Status"
+															Classes="h4"
+															Width="150"
+															Foreground="{DynamicResource FontForeground}"/>
+														<TextBlock
+															Text="{CompiledBinding EmployeeStatus}"
+															Classes="h5"
+															Margin="200,0"
+															Foreground="{DynamicResource FontForeground}"/>
+													</StackPanel>
+													<Separator Width="2000" Margin="0,20"/>
+
+													<!-- Date Joined Row -->
+													<StackPanel Grid.Column="1" Orientation="Horizontal">
+														<TextBlock
+															Text="Date Joined"
+															Classes="h4"
+															Width="150"
+															Foreground="{DynamicResource FontForeground}"/>
+														<TextBlock
+															Text="{CompiledBinding EmployeeDateJoined}"
+															Classes="h5"
+															Margin="200,0"
+															Foreground="{DynamicResource FontForeground}"/>
+													</StackPanel>
+												</StackPanel>
+											</StackPanel>
+										</shadui:Card>
+
+										<!-- Personal Information Section -->
+										<shadui:Card Margin="0,10">
+											<StackPanel>
+												<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+													<Svg
+														Width="30"
+														Height="30"
+														VerticalAlignment="Center"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/personal-information-icon.svg"/>
+													<shadui:CardTitle
+														Content="Personal Information"
+														FontSize="22"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource InfoColor}"
+														VerticalAlignment="Center"
+														Margin="20,0"/>
+												</StackPanel>
+												<Separator Margin="0,20"/>
+												<Grid>
+													<Grid.ColumnDefinitions>
+														<ColumnDefinition Width="*"/>
+														<ColumnDefinition Width="*"/>
+														<ColumnDefinition Width="*"/>
+														<ColumnDefinition Width="*"/>
+													</Grid.ColumnDefinitions>
+
+													<StackPanel>
+														<!-- Full Name Row -->
+														<StackPanel Grid.Column="0" Orientation="Horizontal">
+															<TextBlock
+																Text="Full Name"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeFullName}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Age Row -->
+														<StackPanel Grid.Column="1" Orientation="Horizontal">
+															<TextBlock
+																Text="Age"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeAge}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Birthdate Row -->
+														<StackPanel Grid.Column="2" Orientation="Horizontal">
+															<TextBlock
+																Text="Birthdate"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeBirthDate}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Gender Row -->
+														<StackPanel Grid.Column="3" Orientation="Horizontal">
+															<TextBlock
+																Text="Gender"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeGender}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+													</StackPanel>
+												</Grid>
+											</StackPanel>
+										</shadui:Card>
+
+										<!-- Contact Information Section -->
+										<shadui:Card>
+											<StackPanel>
+												<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+													<Svg
+														Width="30"
+														Height="30"
+														VerticalAlignment="Center"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/personal-information-icon.svg"/>
+													<shadui:CardTitle
+														Content="Contact Information"
+														FontSize="22"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource InfoColor}"
+														VerticalAlignment="Center"
+														Margin="20,0"/>
+												</StackPanel>
+												<Separator Margin="0,20"/>
+												<Grid>
+													<Grid.ColumnDefinitions>
+														<ColumnDefinition Width="*"/>
+														<ColumnDefinition Width="*"/>
+													</Grid.ColumnDefinitions>
+													<StackPanel>
+														<!-- Phone Number Row -->
+														<StackPanel Grid.Column="0" Orientation="Horizontal">
+															<TextBlock
+																Text="Phone Number"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeePhoneNumber}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Last Login Row -->
+														<StackPanel Grid.Column="1" Orientation="Horizontal">
+															<TextBlock
+																Text="Last Login"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeLastLogin}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+													</StackPanel>
+												</Grid>
+											</StackPanel>
+										</shadui:Card>
+										<!-- Address Information Section -->
+										<shadui:Card Margin="0,10">
+											<StackPanel>
+												<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+													<Svg
+														Width="30"
+														Height="30"
+														VerticalAlignment="Center"
+														Path="avares://AHON_TRACK/Assets/ManageEmployeesView/address-icon.svg"/>
+													<shadui:CardTitle
+														Content="Home Address"
+														FontSize="22"
+														FontWeight="SemiBold"
+														Foreground="{DynamicResource InfoColor}"
+														VerticalAlignment="Center"
+														Margin="20,0"/>
+												</StackPanel>
+												<Separator Margin="0,20"/>
+												<Grid>
+													<Grid.ColumnDefinitions>
+														<ColumnDefinition Width="*"/>
+														<ColumnDefinition Width="*"/>
+													</Grid.ColumnDefinitions>
+													<StackPanel>
+														<!-- House Address Row -->
+														<StackPanel Grid.Column="0" Orientation="Horizontal">
+															<TextBlock
+																Text="House Address"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeHouseAddress}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- House Number Row -->
+														<StackPanel Grid.Column="1" Orientation="Horizontal">
+															<TextBlock
+																Text="House Number"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeHouseNumber}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Street Row -->
+														<StackPanel Grid.Column="2" Orientation="Horizontal">
+															<TextBlock
+																Text="Street"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeStreet}"
+																Classes="h5"
+																Margin="200,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+
+														<!-- Barangay Row -->
+														<StackPanel Grid.Column="3" Orientation="Horizontal">
+															<TextBlock
+																Text="City &amp; Province"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeCityProvince}"
+																Classes="h5"
+																Margin="200,0"
 																Foreground="{DynamicResource FontForeground}"/>
 														</StackPanel>
 													</StackPanel>
