fix(MainWindow): add minimum width and height property for the main window so that it would not resize to the smallest possible size

--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -11,6 +11,8 @@
 	x:Class="AHON_TRACK.Views.MainWindow"
 	d:DesignWidth="1920"
 	d:DesignHeight="1080"
+	MinWidth="1150"
+	MinHeight="830"
 	x:DataType="vm:MainWindowViewModel"
 	mc:Ignorable="d"
 	Title="AHON TRACK"
