--- a/App.axaml
+++ b/App.axaml
@@ -13,6 +13,10 @@
 				<ResourceInclude Source="/Components/Dashboard/OverviewCard.axaml"/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
+		<FontFamily x:Key="JetbrainsFont">avares://AHON_TRACK/Assets/Fonts#Jetbrains</FontFamily>
+		<FontFamily x:Key="ManropeFont">avares://AHON_TRACK/Assets/Fonts#Manrope</FontFamily>
+		<FontFamily x:Key="LucideIcon">avares://AHON_TRACK/Assets/Fonts#lucide</FontFamily>
+		<FontFamily x:Key="ShadUIIcon">avares://AHON_TRACK/Assets/Fonts#shadui</FontFamily>
 	</Application.Resources>
 
 	<Application.DataTemplates>
