--- a/Views/CheckInOutView.axaml
+++ b/Views/CheckInOutView.axaml
@@ -71,7 +71,8 @@
 											Classes="Primary"
 											Padding="30,0,30,0"
 											Height="40"
-											Margin="0,20"/>
+											Margin="0,20"
+											Command="{CompiledBinding OpenLogWalkInPurchaseCommand}"/>
 									</StackPanel>
 									<Grid RowDefinitions="Auto *">
 										<DataGrid
