--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -137,7 +137,7 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{CompiledBinding}"
+						Command="{CompiledBinding OpenManageMembershipCommand}"
 						Content="Manage Membership"
 						FontSize="15"
 						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Manage Membership'}">
