--- a/Views/ManageMembershipView.axaml
+++ b/Views/ManageMembershipView.axaml
@@ -10,7 +10,7 @@
 	xmlns:avalonia="clr-namespace:LiveChartsCore.SkiaSharpView.Avalonia;assembly=LiveChartsCore.SkiaSharpView.Avalonia"
 	xmlns:converters="clr-namespace:AHON_TRACK.Converters"
 	xmlns:viewModels="clr-namespace:AHON_TRACK.ViewModels"
-	mc:Ignorable="d" 
+	mc:Ignorable="d"
 	xmlns:system="clr-namespace:System;assembly=System.Runtime"
 	d:DesignWidth="1920" d:DesignHeight="1080">
 
@@ -42,5 +42,97 @@
 				Foreground="{StaticResource FontForeground}"
 				Margin="90,30"/>
 		</StackPanel>
+		<ScrollViewer HorizontalScrollBarVisibility="Auto">
+			<StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="100,30,48,24" Spacing="16">
+				<shadui:BreakpointViewPort>
+					<shadui:BreakpointView Breakpoint="XlAndUp">
+						<Grid ColumnDefinitions="2* 1*">
+							<shadui:Card Margin="0,30" HorizontalAlignment="Left" VerticalAlignment="Top" Height="800">
+								<StackPanel Spacing="25">
+									<StackPanel Orientation="Horizontal">
+										<TextBox
+											Width="260"
+											HorizontalAlignment="Left"
+											shadui:ControlAssist.ShowProgress="{CompiledBinding }"
+											shadui:ControlAssist.Height="40"
+											Classes="Clearable"
+											Text="{CompiledBinding , Mode=TwoWay}"
+											FontSize="15"
+											Watermark="Search Members...">
+											<TextBox.InnerRightContent>
+												<Svg
+													Width="20"
+													Opacity="0.75"
+													Path="/Assets/ManageEmployeesView/search-icon.svg"/>
+											</TextBox.InnerRightContent>
+										</TextBox>
+										<ComboBox
+											HorizontalAlignment="Left"
+											VerticalAlignment="Center"
+											PlaceholderText="Sort Data"
+											Margin="20,0"
+											Width="150"
+											SelectedIndex="{CompiledBinding }">
+											<ComboBoxItem Content="By ID"/>
+											<ComboBoxItem Content="Names by A-Z"/>
+											<ComboBoxItem Content="Names by Z-A"/>
+											<ComboBoxItem Content="Usernames by A-Z"/>
+											<ComboBoxItem Content="Usernames by Z-A"/>
+											<ComboBoxItem Content="By newest to oldest"/>
+											<ComboBoxItem Content="By oldest to newest"/>
+											<ComboBoxItem Content="Reset Data"/>
+										</ComboBox>
+										<ComboBox
+											HorizontalAlignment="Left"
+											VerticalAlignment="Center"
+											PlaceholderText="Filter"
+											Width="150"
+											SelectedIndex="{CompiledBinding }">
+											<ComboBoxItem Content="By active"/>
+											<ComboBoxItem Content="By inactive"/>
+											<ComboBoxItem Content="By terminated"/>
+										</ComboBox>
+										<Button
+											HorizontalAlignment="Right"
+											Margin="120,0,0,0"
+											Content="Add New Member"
+											Classes="Primary"
+											FontSize="16"
+											Width="200"
+											Height="40"
+											Padding="20,0,20,0"
+											Command="{CompiledBinding }">
+											<!-- Bugged icon || Moving Icon to the left makes it smaller
+											<shadui:ButtonAssist.Icon>
+												<Svg
+													Width="20"
+													Height="20"
+													Path="/Assets/ManageEmployeesView/add-new-employee-icon.svg"/>
+											</shadui:ButtonAssist.Icon>
+											-->
+										</Button>
+									</StackPanel>
+									<DataGrid
+										Height="670"
+										x:Name="ManageEmployeeDataGrid"
+										CanUserReorderColumns="False"
+										CanUserSortColumns="False"
+										GridLinesVisibility="Horizontal"
+										ItemsSource="{CompiledBinding }"
+										SelectionMode="Single"
+										Background="{DynamicResource CardBackgroundColor}"
+										RowBackground="{DynamicResource CardBackgroundColor}"
+										HeadersVisibility="Column"
+										Margin="0">
+									</DataGrid>
+								</StackPanel>
+							</shadui:Card>
+							<shadui:Card Grid.Column="1" Margin="10,30" VerticalAlignment="Top" Height="500">
+							</shadui:Card>
+						</Grid>
+					</shadui:BreakpointView>
+				</shadui:BreakpointViewPort>
+			</StackPanel>
+		</ScrollViewer>
 	</DockPanel>
 </UserControl>
