--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,12 +1,10 @@
-<Window
+<shadui:Window
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:vm="using:AHON_TRACK.ViewModels"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:views="clr-namespace:AHON_TRACK.Views"
 	xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
-	xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Svg.Controls.Avalonia"
 	xmlns:converters="clr-namespace:AHON_TRACK.Converters"
 	x:Class="AHON_TRACK.Views.MainWindow"
 	d:DesignWidth="1920"
@@ -34,18 +32,6 @@
 		<shadui:ToastHost Manager="{CompiledBinding ToastManager}" ZIndex="1000"/>
 		<shadui:DialogHost Manager="{CompiledBinding DialogManager}" Owner="{Binding RelativeSource={RelativeSource AncestorType=shadui:Window}}"/>
 	</shadui:Window.Hosts>
-
-	<Window.Resources>
-		<SolidColorBrush x:Key="MutedColor" Color="#2C2F36" Opacity="0.70"/>
-		<SolidColorBrush x:Key="FontForeground" Color="#2C2F36"/>
-		<SolidColorBrush x:Key="ForegroundColor" Color="#2C2F36"/>
-
-		<SolidColorBrush x:Key="PrimaryColor" Color="#2C2F36"/>
-		<SolidColorBrush x:Key="PrimaryColor75" Color="#2C2F36" Opacity="0.75"/>
-		<SolidColorBrush x:Key="PrimaryColor50" Color="#2C2F36" Opacity="0.50"/>
-		<SolidColorBrush x:Key="PrimaryColor10" Color="#2C2F36" Opacity="0.10"/>
-
-	</Window.Resources>
 
 	<Design.DataContext>
 		<!-- This only sets the DataContext for the previewer in an IDE,
@@ -504,4 +490,4 @@
 			<TransitioningContentControl Grid.Column="1" Content="{CompiledBinding SelectedPage}"/>
 		</Grid>
 	</Panel>
-</Window>
+</shadui:Window>
